# MyCodeAgent

./: .chat_history  .env  .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  README.md  code_law.md  copilot-session-5ffae08d-d5a9-4d33-b72e-680e333c57e0.md  index.html  introduction.html  main.py  mcp_servers.example.json  mcp_servers.json  project-intro.html  pyproject.toml  requirements-dev.txt  requirements.txt
agentEngines/: ReActEngine.py
agents/: __init__.py  codeAgent.py  testAgent.py
app/: __init__.py  bootstrap.py  cli.py
core/: agent.py  config.py  context_builder.py  env.py  exceptions.py  history_manager.py  llm.py  message.py  openai_compat.py  session_store.py  summary_compressor.py  trace_logger.py
demo/: README.md  __init__.py  harness_portfolio.py  mycodeagent_intro.html  项目介绍.html
docs/: BashTool设计文档.md  DEV_HANDOFF.md  HARNESS.md  HARNESS_COMPLETION_GATE.md  HARNESS_EXECUTION_PROTOCOL.md  HARNESS_LONG_TERM_MEMORY.md  HARNESS_PROMPT_ASSEMBLY.md  HARNESS_ROADMAP.md  HARNESS_TASK_BREAKDOWN.md  HARNESS_TRACE_PROTOCOL.md  ReadTool设计文档.md  SKILL_EVOLUTION_DESIGN.md  TraceLogging设计文档.md  WriteTool设计文档.md  context-management-report-kode.md  context-management-technical-report.md  context_engineering_build.md  demo  enhancement-plan.md  interview_experience.md  mcp-implementation-python.md  research-archive.md  skillTool设计文档.md  task(subagent)设计文档.md  上下文工程_方案草案.md  上下文工程经验分享.md  上下文工程设计文档.md  上下文管理方案技术介绍.html  假设前提文档.md  工具输出截断设计文档.md  测试提示词.md  通用工具响应协议.md  项目概览.md
eval/: run_eval.py
experimental/: __init__.py
extensions/: __init__.py
(+574 files in other folders)
