[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mycodeagent"
version = "0.1.0"
description = "A local-first Python coding-agent harness"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
mcp = [
    "anyio>=3.0.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.8.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
mycodeagent = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "extensions*", "prompts*", "runtime*", "tools*", "utils*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not credentialed'"
markers = [
    "credentialed: live provider evaluation; excluded from deterministic core CI",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
# These executable bootstraps must add the repository root before local imports.
"demo/harness_portfolio.py" = ["E402"]
"tests/conftest.py" = ["E402"]
